#NA Fix overflow cut in nexus 6 landscape

--- a/web/themes/da_vinci/css/main.css
+++ b/web/themes/da_vinci/css/main.css
@@ -1255,7 +1255,6 @@ head:hover ~ body .info__inner-wrapper:before {
   margin: 30px auto 0;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 .page-node-type-basic-page .layout-container {
