--- a/web/themes/da_vinci/src/sass/layout/_layout.sass
+++ b/web/themes/da_vinci/src/sass/layout/_layout.sass
@@ -28,7 +28,7 @@ body
   margin: 30px auto 0
   display: flex
   flex-direction: column
-  overflow: hidden
+  //overflow: hidden -----> menu cut in nexus mobile
   .page-node-type-basic-page &
     background: transparent url('../images/bg-sea-map.svg') no-repeat
     background-size: 110%
